--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -10,7 +10,7 @@
   "game-selection": {
     "header": "Scegli un gioco per il quale gestire le mod.",
     "select-button": "Seleziona Gioco",
-    "search-placeholder": "Cerca titolo..",
+    "search-placeholder": "Cerca titolo",
     "empty-results": "Nessun gioco corrisponde alla query di ricerca"
   },
   "settings": {
@@ -82,6 +82,7 @@
     "currently-selected": "Attualmente selezionato",
     "start-modded-button": "Inizia modificato",
     "start-vanilla-button": "Inizia con la vaniglia",
-    "config-button": "Modifica configurazioni"
+    "config-button": "Modifica configurazioni",
+    "search-mods": "Cerca mod"
   }
 }
