--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -83,6 +83,8 @@
     "start-modded-button": "Inizia modificato",
     "start-vanilla-button": "Inizia con la vaniglia",
     "config-button": "Modifica configurazioni",
-    "search-mods": "Cerca mod"
+    "search-mods": "Cerca mod",
+    "empty-results": "Nessuna mod corrisponde alla query di ricerca",
+    "loading-mod-list": "Caricamento elenco mod"
   }
 }
