Implemented mod 'Install' button (with dependencies).

--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -48,7 +48,8 @@
     "favourite": "Favorit",
     "favourites": "Favoriten",
     "unfavourite": "Unfavorit",
-    "install": "Installieren"
+    "install": "Installieren",
+    "cancel": "Stornieren"
   },
   "languages": {
     "en": "Englisch",
