--- a/frontend/src/i18n/locales/es.json
+++ b/frontend/src/i18n/locales/es.json
@@ -48,7 +48,8 @@
     "favourite": "Favorito",
     "favourites": "Favoritos",
     "unfavourite": "No favorito",
-    "install": "Instalar"
+    "install": "Instalar",
+    "cancel": "Cancelar"
   },
   "languages": {
     "en": "Inglés",
