--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -48,7 +48,8 @@
     "favourite": "Preferito",
     "favourites": "Preferiti",
     "unfavourite": "Sfavorito",
-    "install": "Installare"
+    "install": "Installare",
+    "cancel": "Cancellare"
   },
   "languages": {
     "en": "Inglese",
