--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -49,7 +49,9 @@
     "favourites": "Favoriten",
     "unfavourite": "Unfavorit",
     "install": "Installieren",
-    "cancel": "Stornieren"
+    "cancel": "Stornieren",
+    "import": "Import",
+    "export": "Export"
   },
   "languages": {
     "en": "Englisch",
@@ -80,12 +82,16 @@
     "config-editor": {
       "title": "Konfigurationseditor"
     },
-    "currently-selected": "Derzeit ausgewählt",
+    "currently-selected": "Ausgewähltes Spiel",
     "start-modded-button": "Modifiziert starten",
     "start-vanilla-button": "Beginnen Sie mit Vanille",
     "config-button": "Konfigurationen bearbeiten",
     "search-mods": "Mods suchen",
     "empty-results": "Keine Mods entsprechen der Suchanfrage",
-    "loading-mod-list": "Mod-Liste wird geladen"
+    "loading-mod-list": "Mod-Liste wird geladen",
+    "profile-manager": {
+      "header": "Profilmanager",
+      "search-placeholder": "Suchprofile"
+    }
   }
 }
