get rid of old dev tools view

--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -51,7 +51,8 @@
     "install": "Installieren",
     "cancel": "Stornieren",
     "import": "Import",
-    "export": "Export"
+    "export": "Export",
+    "refresh": "Aktualisieren"
   },
   "languages": {
     "en": "Englisch",
