--- a/frontend/src/i18n/locales/es.json
+++ b/frontend/src/i18n/locales/es.json
@@ -51,7 +51,8 @@
     "install": "Instalar",
     "cancel": "Cancelar",
     "import": "Importar",
-    "export": "Exportar"
+    "export": "Exportar",
+    "refresh": "Refrescar"
   },
   "languages": {
     "en": "Inglés",
