--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -51,7 +51,8 @@
     "install": "Installer",
     "cancel": "Annuler",
     "import": "Importer",
-    "export": "Exporter"
+    "export": "Exporter",
+    "refresh": "Rafraîchir"
   },
   "languages": {
     "en": "Anglais",
