--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -51,7 +51,8 @@
     "install": "Installare",
     "cancel": "Cancellare",
     "import": "Importare",
-    "export": "Esportare"
+    "export": "Esportare",
+    "refresh": "Aggiorna"
   },
   "languages": {
     "en": "Inglese",
