--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -81,7 +81,8 @@
     "install": "Install",
     "cancel": "Cancel",
     "import": "Import",
-    "export": "Export"
+    "export": "Export",
+    "uninstall": "Uninstall"
   },
   "languages": {
     "en": "English",
