--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -52,7 +52,8 @@
     "cancel": "Annuler",
     "import": "Importer",
     "export": "Exporter",
-    "refresh": "Rafraîchir"
+    "refresh": "Rafraîchir",
+    "uninstall": "Désinstaller"
   },
   "languages": {
     "en": "Anglais",
