--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -52,7 +52,8 @@
     "cancel": "Cancellare",
     "import": "Importare",
     "export": "Esportare",
-    "refresh": "Aggiorna"
+    "refresh": "Aggiorna",
+    "uninstall": "Disinstallare"
   },
   "languages": {
     "en": "Inglese",
