Fixes/qol in SelectedGame view
- Remove redundant div, put row on viewport instead.
- Fixed tab labels wrapping so that resizing flows nicely.
- Translated the "No mods installed" text.
- Partially fixed some margin and width calc issues by using the app store.
- "Start Modded" button now disabled while no mods are installed.

--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -95,6 +95,7 @@
       "header": "Profilmanager",
       "search-placeholder": "Suchprofile",
       "new-profile": "Neues Profil"
-    }
+    },
+    "no-mods-installed": "Keine Mods installiert."
   }
 }
