--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -95,6 +95,7 @@
       "header": "Gestionnaire de profil",
       "search-placeholder": "Rechercher des profils",
       "new-profile": "Nouveau profil"
-    }
+    },
+    "no-mods-installed": "Aucun mod installé."
   }
 }
