--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -95,6 +95,7 @@
       "header": "Gestore del profilo",
       "search-placeholder": "Cerca profili",
       "new-profile": "Nuovo profilo"
-    }
+    },
+    "no-mods-installed": "Nessuna mod installata."
   }
 }
