migrate setSelectedGame to shared game store

--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -58,7 +58,8 @@
     "merge": "Verschmelzen",
     "about": "Um",
     "games": "Spiele",
-    "create": "Erstellen"
+    "create": "Erstellen",
+    "loading": "Laden"
   },
   "languages": {
     "en": "Englisch",
