--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -92,7 +92,8 @@
     "merge": "Merge",
     "about": "About",
     "games": "Games",
-    "create": "Create"
+    "create": "Create",
+    "loading": "Loading"
   },
   "languages": {
     "en": "English",
