--- a/frontend/src/i18n/locales/es.json
+++ b/frontend/src/i18n/locales/es.json
@@ -58,7 +58,8 @@
     "merge": "Unir",
     "about": "Acerca de",
     "games": "Juegos",
-    "create": "Crear"
+    "create": "Crear",
+    "loading": "Cargando"
   },
   "languages": {
     "en": "Inglés",
