--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -58,7 +58,8 @@
     "merge": "Fusionner",
     "about": "À propos",
     "games": "Jeux",
-    "create": "Créer"
+    "create": "Créer",
+    "loading": "Chargement"
   },
   "languages": {
     "en": "Anglais",
