--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -58,7 +58,8 @@
     "merge": "Unisci",
     "about": "Di",
     "games": "Giochi",
-    "create": "Creare"
+    "create": "Creare",
+    "loading": "Caricamento"
   },
   "languages": {
     "en": "Inglese",
